--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,5 +1,12 @@
 <!-- start custom head snippets -->
 
 <!-- insert favicons. use https://realfavicongenerator.net/ -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6F0CMDMZVY"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-6F0CMDMZVY');
+</script>
 <!-- end custom head snippets -->
